src/test/lab5/invalid/Println.slac
method main(): Unit = {
  // Error: Type error: Expected: String, found: Bool
  println(true)
}
